deployments/web.middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: prd-centralized
spec:
  redirectScheme:
    scheme: https
    permanent: true
