deployments/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
  namespace: prd-centralized
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: web
        image: ghcr.io/rigidd/centralized:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
            httpGet:
              path: /up
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
