deployments/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: prd-centralized
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '80'
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
